# ztg-stock-export

./: .env.example  .gitignore  PROPUESTA_DESARROLLO.md  README.md  _ejecutar_accion.bat  abrir_panel.bat  brand_map.csv  category_map.csv  comparar_snapshots.bat  config.toml  exportar_categorias.bat  exportar_productos.bat  preparar_entorno.bat  probar_borrado_tiendanube.bat  probar_flujo_completo.bat  probar_sync_tiendanube.bat  pyproject.toml  reintentar_imagenes_tiendanube.bat  sincronizar_imagenes_tiendanube.bat  sincronizar_productos.bat  sincronizar_tiendanube.bat  ver_productos_gn_crudo.bat
deploy/: cron.example
scripts/: run_tiendanube_sync.sh
src/gn_stock_export/: __main__.py  api.py  cli.py  config.py  diffing.py  exporter.py  normalizer.py  product_import.py  service.py  storage.py  template_contract.py  tiendanube_api.py  tiendanube_cleanup.py  tiendanube_sync.py
src/gn_stock_export.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_api.py  test_config.py  test_diffing.py  test_normalizer.py  test_product_import.py  test_product_template.py  test_service.py  test_tiendanube_api.py  test_tiendanube_cleanup.py  test_tiendanube_sync.py
