[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gn-stock-export"
version = "0.1.0"
description = "CLI local para exportar y comparar stock desde la API de Grupo Nucleo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.28.0",
  "openpyxl>=3.1.0",
  "pandas>=2.2.0",
  "pytest>=9.0.0",
  "python-dotenv>=1.0.0",
  "typer>=0.12.0",
]

[project.scripts]
gn-stock-export = "gn_stock_export.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

